--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <div class="app-container">
     <div class="page active" id="home-page">
         <div class="header">
-            <img src="logo.jpg" alt="Logo" class="header-logo">
+            <img src="logo.png" alt="Logo" class="header-logo">
         </div>
         <div id="modal" class="modal">
     <div class="modal-content">
@@ -350,7 +350,7 @@
             <p id="last-update">13/04/2019</p>
         </div>
         <div class="credit-card">
-            <img src="cc.jpg" alt="Carte de Crédit">
+            <img src="cc.png" alt="Carte de Crédit">
         </div>
         <div class="history-container-wrapper">
     <h3>Historique de vos transactions :</h3> <!-- Titre déplacé en dehors de .history-container -->
